receiver/force-app/main/receiver/objects/Package_version__c/Package_version__c.object-meta.xml
<CustomObject>
    <label>Package version</label>
    <nameField>
        <label>Package version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>