receiver/force-app/main/receiver/objects/Package_version__c/fields/Bugfix_description__c.field-meta.xml
<CustomField>
    <fullName>Bugfix_description__c</fullName>
    <label>Bugfix description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>