receiver/force-app/main/receiver/objects/Package_version__c/fields/Feature_description__c.field-meta.xml
<CustomField>
    <fullName>Feature_description__c</fullName>
    <label>Feature description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>