receiver/force-app/main/receiver/objects/Package_version__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation with the package from which this version is</description>
    <inlineHelpText>Relation with the package from which this version is</inlineHelpText>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Package versions</relationshipLabel>
    <relationshipName>Package_versions</relationshipName>
    <type>Lookup</type>
</CustomField>