receiver/force-app/main/receiver/objects/Package_version__c/fields/Version_date__c.field-meta.xml
<CustomField>
    <fullName>Version_date__c</fullName>
    <label>Version date</label>
    <type>Date</type>
</CustomField>