receiver/force-app/main/receiver/objects/Package_version__c/fields/Version_differences__c.field-meta.xml
<CustomField>
    <fullName>Version_differences__c</fullName>
    <description>Difference of features/bugfixes between last version released and that of the org</description>
    <inlineHelpText>Difference of features/bugfixes between last version released and that of the org</inlineHelpText>
    <label>Version differences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>