receiver/force-app/main/receiver/objects/Package_version__c/fields/Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Version_Id__c</fullName>
    <description>Id of the package version, used in installation link</description>
    <inlineHelpText>Id of the package version, used in installation link</inlineHelpText>
    <label>Version Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>