receiver/force-app/main/receiver/objects/Package_version__c/fields/Version_name__c.field-meta.xml
<CustomField>
    <fullName>Version_name__c</fullName>
    <label>Version name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>