receiver/force-app/main/receiver/objects/Package_version__c/fields/Version_number__c.field-meta.xml
<CustomField>
    <fullName>Version_number__c</fullName>
    <label>Version number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>