receiver/force-app/main/receiver/objects/Package_version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bugfix_description__c</columns>
    <columns>Feature_description__c</columns>
    <columns>Version_date__c</columns>
    <columns>Version_name__c</columns>
    <columns>Version_number__c</columns>
    <columns>Package__c</columns>
    <columns>Version_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All packages versions</label>
</ListView>